# pes-plant-sensors

./: .gitignore  LICENSE  build-demos.sh
base_station/: CMakeLists.txt  app.overlay  build.sh  prj.conf  super-dry-plant.txt
base_station/drivers/sensor/sensor_node/: CMakeLists.txt  sensor_node.c  sensor_node.h
base_station/dts/bindings/sensor/: pes,sensor-node.yaml
base_station/src/: main-a.c  main-t.c  main.c
daisy/: .gitignore  CMakeLists.txt  buildnflash.ps1  prj.conf
daisy/boards/: rpi_pico2_rp2350a_m33.overlay
daisy/src/: main.c
hum-light-sensor/: CMakeLists.txt  prj.conf
hum-light-sensor/boards/: rpi_pico2_rp2350a_m33.overlay
hum-light-sensor/src/: main.c
hum-light-sensor/src/inc/humidity-sensor/: humidity-sensor.c  humidity-sensor.h
hum-light-sensor/src/inc/light-sensor/: light-sensor.c  light-sensor.h
hum-sensor/: CMakeLists.txt  Makefile  app.overlay.test  prj.conf
hum-sensor/src/: main.c
light-sensor/: CMakeLists.txt
light-sensor/boards/: rpi_pico2_rp2350a_m33.overlay
light-sensor/src/: main.c
moisture-sensor/: .gitignore  CMakeLists.txt  app.overlay  flash.ps1  prj.conf
moisture-sensor/src/: main.c
pico2pico-demo/: CMakeLists.txt  prj.conf
pico2pico-demo-base/: CMakeLists.txt  prj.conf
pico2pico-demo-base/boards/: rpi_pico2_rp2350a_m33.overlay
pico2pico-demo-base/src/: main.c
pico2pico-demo/src/: handler_interface.c  (+1 more)
scripts/: plot_data.py
sensor-node/: CMakeLists.txt  prj.conf
sensor_node/: .gitignore  CMakeLists.txt  app.overlay  build.sh  prj.conf
temp_sensor/: CMakeLists.txt  app.overlay  prj.conf
(+32 files in other folders)
